crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@bitwise_operations___bitwise_and_2.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Bitwise Operations - Bitwise And 2"
input_file: mdtest/01-basics/07-bitwise.md
---
Source:
fn test_bitwise_and_immediates() -> u32 {
    let result = 69u32 & 420u32;
    return result;
}
============================================================
Generated CASM:
test_bitwise_and_immediates:
test_bitwise_and_immediates:
test_bitwise_and_immediates_0:
   0: 23 4 0 2147483643    // u32([fp + -4], [fp + -3]) = 4
   1: 11 _ _ _             // return
