crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@bitwise_operations___bitwise_xor.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Bitwise Operations - Bitwise Xor"
input_file: mdtest/01-basics/07-bitwise.md
---
Source:
fn test_bitwise_xor(x: u32, y: u32) -> u32 {
    let result = x ^ y;
    return result;
}
============================================================
Generated CASM:
test_bitwise_xor:
test_bitwise_xor:
test_bitwise_xor_0:
   0: 38 2147483639 2147483641 2147483643 // u32([fp + -4], [fp + -3]) = u32([fp + -8], [fp + -7]) ^ (u32) u32([fp + -6], [fp + -5])
   1: 11 _ _ _             // return
