crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@bitwise_operations___bitwise_xor_2.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Bitwise Operations - Bitwise Xor 2"
input_file: mdtest/01-basics/07-bitwise.md
---
Source:
fn test_bitwise_xor_immediates() -> u32 {
    let result = 69u32 ^ 420u32;
    return result;
}
============================================================
Generated CASM:
test_bitwise_xor_immediates:
test_bitwise_xor_immediates:
test_bitwise_xor_immediates_0:
   0: 23 481 0 2147483643  // u32([fp + -4], [fp + -3]) = 481
   1: 11 _ _ _             // return
